@@ -1,6 +1,10 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.150 2005/01/16 15:05:50 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.151 2005/01/23 19:21:40 wolf31o2 Exp $
+
+  23 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
+  livecd/runscript-support/livecdfs-update.sh:
+  Firmware updated to use new /lib/firmware directory.
 
   16 Jan 2005; John Davis <zhen@gentoo.org> catalyst:
   fix from pvdabeel@gentoo.org. patch fixes a small bug that caused grp to not
